--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,10 @@
   },
   "homepage": "https://github.com/MiroslavYosifov/Server-Skeleton-NodeJS#readme",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.3",
+    "mocha": "^8.3.0",
+    "nodemon": "^2.0.7",
+    "sinon": "^9.2.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
